--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,17 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:vue/vue3-essential"],
+  "extends": ["plugin:vue/base"],
   "overrides": [],
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 2021,
     "sourceType": "module",
     "ecmaFeatures": {
       "modules": true
     }
   },
-  "plugins": ["vue"],
+
+  "plugins": ["@vue"],
   "rules": {
     "no-unused-vars": "warn"
   }
